src/styles/component/_form.sass
input
  border: none
  height: 30px
  // border-radius: 8px
  background-color: $dark
  color: $white
  width: 400px
  @media only screen and (max-width: $desktopBreakpoint)
    width: 270px

.input-title,.input-ingredient,.input-price
    height: button-height

.input-description
  line-height: 1rem
  height: 3rem

.section-admin
  text-align: center
  .admin-subtitle,.admin-instructions
    width: 100%

.verif
  font-size: 13px
  text-align: left

